--- a/htdocs/proj-bp.html
+++ b/htdocs/proj-bp.html
@@ -189,7 +189,7 @@ label definition of <code>foo.high_bound</code> immediately following
 in uninitialized data (BSS or common), GCC cannot do this, and it's
 left to the linker to synthesize <code>foo.high_bound</code>.
 I have a small patch to GNU ld that does this for ELF targets.
-(<a href="http:proj-bp-patch-ld.txt">Get the ld patch from here.</a>.)
+(<a href="http:gcc.gnu.org/proj-bp-patch-ld.txt">Get the ld patch from here.</a>.)
 
 <p><li><h3>gdb</h3>
 
@@ -294,7 +294,7 @@ from CVS.
 
 You will need a small patch to GNU ld so that it will synthesize
 ``<code>foo.high_bound</code>'' symbols for common & bss symbols.  <a
-href="http:proj-bp-patch-ld.txt">Get the ld patch from here.</a> The patch
+href="http:gcc.gnu.org/proj-bp-patch-ld.txt">Get the ld patch from here.</a> The patch
 is relative to <code>binutils-2.10</code>, but will work on
 <code>binutils-2.9</code> as well.
 
@@ -305,7 +305,7 @@ of the ordinary.  Download a modern gdb release, or get the code from
 CVS.
 
 You will need a small patch to gdb so that it won't crash starting up
-on a BP-mode program.  <a href="http:proj-bp-patch-gdb.txt">Get the gdb
+on a BP-mode program.  <a href="http:gcc.gnu.org/proj-bp-patch-gdb.txt">Get the gdb
 patch from here.</a> The patch is relative to <code>gdb-5.0</code>,
 but will work on <code>gdb-4.18</code> as well, if you supply the
 `<code>-l</code>' option to <code>patch</code> to make it more lenient
