Fix a couple of typos.

--- a/htdocs/proj-bp.html
+++ b/htdocs/proj-bp.html
@@ -537,9 +537,9 @@ assembler because they are performance critical, such as the memory
 and string functions (<code>bcopy</code>, <code>bzero</code>,
 <code>memcpy</code>, <code>memcmp</code>, <code>memset</code>,
 <code>strchr</code>, <code>strcpy</code>, <code>strcmp</code>,
-<code>strlen</code>, <code>strtok</code>), and primitives for
+<code>strlen</code>, <code>strtok</code>, etc), and primitives for
 multi-precision arithmetic (<code>add_n</code>, <code>addmul_1</code>,
-<code>mul_1</code>, <code>sub_n</code>, <code>submul_n</code>,
+<code>mul_1</code>, <code>sub_n</code>, <code>submul_1</code>,
 <code>lshift</code>, and <code>rshift</code>).  A few are coded in
 assembler because they have special semantics that can't be achieved
 with plain C, namely <code>setjmp</code> and <code>longjmp</code>.
@@ -551,7 +551,7 @@ value, and they must check the bounds of their arguments.
 The best way to proceed is to study what's already been done for Intel
 x86, a CISC target, and for PowerPC, a RISC target.
 
-<p><li><h3>C Startup Functions in GNU C Library</h3>
+<p><li><h3>Startup Functions in GNU C Library</h3>
 
 <p>Again, the best way to proceed is to study what's already been
 done for Intel x86 and (soon) for PowerPC.
