--- a/htdocs/proj-bp.html
+++ b/htdocs/proj-bp.html
@@ -80,7 +80,7 @@ support includes thunks for system calls that accept bounded pointer
 arguments, check their bounds and pass simple pointers on to the
 OS kernel.
 
-<p><li><h3>Committing GCC Changes</h3> My primary is on getting GCC
+<p><li><h3>Committing GCC Changes</h3> My primary focus is on getting GCC
 changes out of the branch and committed to the CVS trunk.
 
 <p><li><h3>Documentation</h3> My secondary focus is on writing
