mention new prefix operators __ptr*

--- a/htdocs/proj-bp.html
+++ b/htdocs/proj-bp.html
@@ -54,13 +54,16 @@ for Intel x86 using GCC code on the CVS branch tag
 ``<code>bounded-pointers-branch</code>''.  Basic functionality includes
 
 <ul>
-<p><li> synthesis of a datum's bounds upon application of <code>addressof</code>.
+<p><li>synthesis of a datum's bounds upon application of <code>addressof</code>.
 (Bounded pointers are also returned by memory allocators such as
 <code>malloc</code>, but that's implemented by the allocator library.)
-<p><li> propagation of bounds via pointer assignment,
+<p><li>propagation of bounds via pointer assignment,
 function argument passing and function value return
 <p><li>programmer control over boundedness of pointer types via new qualifiers
-``<code>__bounded</code>'' and ``<code>__unbounded</code>.''
+``<code>__bounded</code>'' and ``<code>__unbounded</code>,'' and
+access to the components of a bounded pointer via new prefix operators
+``<code>__ptrvalue</code>'', ``<code>__ptrlow</code>'' and
+``<code>__ptrhigh</code>''.
 </ul>
 
 <p>I have tested BPs on <code>fileutils</code>, <code>textutils</code>
