--- a/htdocs/install/download.html
+++ b/htdocs/install/download.html
@@ -2,33 +2,30 @@
 <head>
 <title>Downloading GCC</title>
 </head>
+
 <body>
 <h1 align="center">Downloading GCC</h1>
 
-<p>GCC is distributed via FTP tarballs compressed with gzip or bzip2.  It is
-possible to download a full distribution or specific components.
+<p>GCC is distributed via CVS and FTP tarballs compressed with gzip or
+bzip2. It is possible to download a full distribution or specific
+components.</p>
+
+<p>Please refer to our <a href="http://gcc.gnu.org/releases.html">releases
+web page</a> for information on how to obtain GCC.</p>
 
 <p>The full distribution includes the C, C++, Objective-C, Fortran, Java,
 and Chill compilers.  The full distribution also includes runtime libraries
 for C++, Objective-C and Fortran.  In the future the GNU compiler testsuites
-will be included in the full distribution.
+will be included in the full distribution.</p>
 
 <p>If you choose to download specific components, you must download the core
 gcc distribution plus any language specific distributions you wish to
 use.  The core distribution includes the C language front-end as well as the
 shared componenets. Each language has a tarball which includes the language
-front-end as well as the language runtime (when appropriate).
+front-end as well as the language runtime (when appropriate).</p>
 
 <p>Unpack the core distribution as well as any language specific distributions
-in the same directory.
-
-<p>XXX FSF mirror sites
-<p><a href="ftp://gcc.gnu.org/pub/gcc/releases/index.html">
-FTP download from gcc.gnu.org (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/gcc/releases/index.html">
-FTP download from go.cygnus.com (USA California -- High speed link
-provided by Stanford)</a>
-<p>GCC releases are available on many <a href="../mirrors.html">FTP mirror sites</a>. If possible, please use one of these.
+in the same directory.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
