Update for items covered by recent format checking patches.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -169,7 +169,7 @@ paragraph 6) do not count as library issues.</p>
 <tr><td><em>the <code>vscanf</code> family of functions
     in<br><code>&lt;stdio.h&gt;</code> and <code>&lt;wchar.h&gt;</code></em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td>Missing</td>
+    <td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>additional math library functions in <code>&lt;math.h&gt;</code></em></td>
@@ -192,7 +192,7 @@ paragraph 6) do not count as library issues.</p>
 </tr>
 
 <tr><td><em><code>%lf</code> conversion specifier<br>allowed in <code>printf</code></em></td>
-    <td>Library Issue</td><td></td><td></td><td>Missing</td>
+    <td>Library Issue</td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>inline functions</em></td>
@@ -202,7 +202,7 @@ paragraph 6) do not count as library issues.</p>
 
 <tr><td><em>the <code>snprintf</code> family of functions in <code>&lt;stdio.h&gt;</code></em></td>
     <td>Library Issue</td>
-    <td></td><td></td><td>Missing</td>
+    <td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>boolean type in <code>&lt;stdbool.h&gt;</code></em></td>
