update packages-tested section

--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -491,14 +491,14 @@ $ bpmake check
 
 </ul>
 
-<h2><a name="testbpuse">Packages Tested Using Bounded Pointers</a></h2>
+<h2><a name="testbpuse">Packages Tested Using Bounded Pointers (updated 2000-08-06)</a></h2>
 
 <p>Below is a list of results for packages tested with bounds checking.
 Unless otherwise noted, tests were done by me (Greg).</p>
 
 <ul>
 
-<li><h3>GNU awk</h3>
+<li><h3>GNU awk 3.0.61</h3>
 
 <p>Bounds violations exposed:</p>
     <ul>
@@ -507,9 +507,11 @@ Unless otherwise noted, tests were done by me (Greg).</p>
     </ul>
 
 <p>100% of the test suite passes after fixing the bugs listed above.
-(However, the maintainer admits that the test suite is hardly comprehensive.)</p>
+(However, the maintainer admits that the test suite is hardly
+comprehensive.)  Fixes should appear in 3.0.61.
+</p>
 
-<li><h3>GNU textutils</h3>
+<li><h3>GNU textutils 2.0g</h3>
 
 <p>Bounds violations exposed:</p>
     <ul>
@@ -523,9 +525,10 @@ Unless otherwise noted, tests were done by me (Greg).</p>
     beginning of a string buffer when given an empty input file.
     </ul>
 
-<p>100% of the test suite passes after fixing the bugs listed above.</p>
+<p>100% of the test suite passes after fixing the bugs listed above.
+Fixes should appear in 2.0h</p>
 
-<li><h3>GNU shellutils</h3>
+<li><h3>GNU shellutils 2.0k</h3>
 
 <p>Bounds violations exposed:</p>
     <ul>
@@ -535,7 +538,15 @@ Unless otherwise noted, tests were done by me (Greg).</p>
 
 <p>100% of the test suite passes after fixing the bugs listed above.</p>
 
-<li><h3>GNU fileutils</h3>
+<li><h3>GNU make 3.79.1</h3>
+
+<p>No bounds violations exposed.  100% of the test suite passes.</p>
+
+<li><h3>GNU findutils 4.1.5</h3>
+
+<p>No bounds violations exposed.  100% of the test suite passes.</p>
+
+<li><h3>GNU fileutils 4.0y</h3>
 
 <p>Bounds violations exposed:</p>
     <ul>
@@ -545,7 +556,7 @@ Unless otherwise noted, tests were done by me (Greg).</p>
 
 <p>Testing and fixing is in progress...</p>
 
-<li><h3>GNU id-utils</h3>
+<li><h3>GNU id-utils 3.2d</h3>
 
 <p>Bounds violations exposed:</p>
 
