Link to GCJ and libstdc++ mailing lists, at present on sources.redhat.com rather than integrated with the main GCC lists/web presence.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -64,6 +64,19 @@
 
 <p>To post a message, just send mail to <i>listname</i><tt>@gcc.gnu.org</tt>.
 
+<p>There are also some related lists <tt>@sources.redhat.com</tt> for
+the Java compiler and the C++ standard library:</p>
+
+<ul>
+
+<li><a href="http://sources.redhat.com/java/mail.html">GCJ mailing
+lists</a></li>
+
+<li><a
+href="http://sources.redhat.com/libstdc++/mail.html">libstdc++-v3
+mailing lists</a></li>
+
+</ul>
 
 <h2><a name="msgsize">Policies</a></h2>
 
