--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -330,7 +330,7 @@ declared in <CODE>std::</CODE>).
 <p>SGI's implementation of the STL is included, but it is in the
 global namespace, not in <CODE>std::</CODE>.
 
-<p>Work is underway to complete a <a href="libstdc++-v3.html">new C++
+<p>Work is underway to complete a <a href="http://sources.redhat.com/libstdc++/">new C++
 library</a> which will provide all the functionality in a compliant
 way.
 
