--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -203,7 +203,7 @@ A new snapshot of the new
 <a href="ftp://sourceware.cygnus.com/pub/libstdc++/libstdc++-2.90.6.tar.gz">
 Standard C++ Library V3</a> has been released.  You can find more information
 from the
-<a href="http://sourceware.cygnus.com/libstdc++/">libstdc++ project's home page</a>.
+<a href="http://sources.redhat.com/libstdc++/">libstdc++ project's home page</a>.
 
 <p>Cygnus Solutions has released
 <a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.tar.gz">libgcj
@@ -269,7 +269,7 @@ The sixth snapshot of the ongoing re-written C++ Standard Library has
 been released.  It includes SGI STL 3.2, an automatically generated
 <code>&lt;limits&gt;</code>, a partially re-written valarray, a working
 stringbuf and stringstream (for basic types). For more informtaion,
-please check <a href="http://sourceware.cygnus.com/libstdc++/">
+please check <a href="http://sources.redhat.com/libstdc++/">
 libstdc++-2.90.5</a>. 
 </dd>
 
@@ -323,7 +323,7 @@ release of libgcj, the runtime component of the GNU compiler for Java.
 A new snapshot of the C++ standard library re-write has been
 released. This release includes SGI STL 3.12, a working valarray, and
 several (but not all) parts of templatized iostreams--for more information see:
-<a href="http://sourceware.cygnus.com/libstdc++/"> libstdc++-2.90.4</a>.
+<a href="http://sources.redhat.com/libstdc++/">libstdc++-2.90.4</a>.
 </dd>
 
 <dt><b>March 23, 1999</b></dt>
@@ -426,8 +426,8 @@ processor.
 
 <dt><b>November 5, 1998</b></dt>
 <dd>The third snapshot of the rewritten <tt>libstdc++</tt> is available.
-You can read some more on <a href="http://sourceware.cygnus.com/libstdc++/">
-http://sourceware.cygnus.com</a>.
+You can read some more on <a href="http://sources.redhat.com/libstdc++/">
+http://sources.redhat.com/libstdc++/</a>.
 </dd>
 
 <dt><b>October 27, 1998</b></dt>
@@ -477,7 +477,7 @@ optimization</a> support.
 
 <dt><b>July 15, 1998</b></dt>
 <dd>The first snapshot of the rewritten <tt>libstdc++</tt> is available.
-You can read some more <a href="libstdc++-v3.html">here</a>.
+You can read some more <a href="http://sources.redhat.com/libstdc++/">here</a>.
 </dd>
 
 <dt><b>June 29, 1998</b></dt>
