Modified gnatsweb link to point directly to gcc bug base

--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -16,7 +16,7 @@ style of GNATS. The advantage of using GNATS is that you can always
 check the status of your bug reports.</p>
 
 <p>To submit bug reports for GCC, you can either use the <a
-href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">gnatsweb</a> interface,
+href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&user=guest&password=guest&cmd=login">gnatsweb</a> interface,
 or the gccbug script that is currently included in the GCC snapshots
 only. Both techniques use the same bug database, in the case of the
 script, the bug report is send by email.</p>
