Add web2c to packages-tested section

--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -546,6 +546,19 @@ Fixes should appear in 2.0h</p>
 
 <p>No bounds violations exposed.  100% of the test suite passes.</p>
 
+<li><h3>web2c 7.3.2 (TeX and Metafont)</h3>
+
+<p>Bounds violations exposed:</p>
+    <ul>
+    <li> <code>fixwrites</code>: <code>main</code> read past the
+    beginning of a string buffer when presented with an empty line.
+    </ul>
+
+<p>100% of the test suite passes after fixing the bug listed above,
+and compliling with ``<code>gcc ... -fno-strict-aliasing</code>''.
+A strict-aliasing bug for i586 and i686 caused two assertion failures
+in <code>kpathsea</code>.</p>
+
 <li><h3>GNU fileutils 4.0y</h3>
 
 <p>Bounds violations exposed:</p>
