mention gdb patch in toolchain section

--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -280,6 +280,10 @@ names when setting breakpoints or printing function addresses.</p>
 <p>It would be useful to teach gdb about these two idiosyncrasies of
 bounded pointers.</p>
 
+<p>You will need a small patch to gdb so that it won't crash starting up
+on a BP-mode program.  (<a href="patch-gdb.txt">Get the gdb
+patch from here</a>)</p>
+
 <li><h3><a name="autoconf">autoconf</a></h3>
 
 <p>The ``<code>__BP_</code>'' prefix that is applied to functions
