Fix bpmake script.  Update packages-tested date

--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -477,7 +477,7 @@ $ bpenv eval make 'CFLAGS="$CFLAGS"'
 
 <pre>
 #!/bin/bash
-bpenv eval make 'CC="$CC"' "$@"
+bpenv eval make 'CC="$CC"' 'CFLAGS="$CFLAGS"' 'LDFLAGS="$LDFLAGS"' "$@"
 </pre>
 
 <p>With these scripts, the sequence for building and testing a GNU
@@ -495,7 +495,7 @@ $ bpmake check
 
 </ul>
 
-<h2><a name="testbpuse">Packages Tested Using Bounded Pointers (updated 2000-08-06)</a></h2>
+<h2><a name="testbpuse">Packages Tested Using Bounded Pointers (updated 2000-08-09)</a></h2>
 
 <p>Below is a list of results for packages tested with bounds checking.
 Unless otherwise noted, tests were done by me (Greg).</p>
